Исправил замечание проверяющего наставника по второй попытке

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Техномарт</title>
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i%7CPT+Sans:400,400i,700,700i&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style-min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="cuprum-family">
@@ -18,11 +18,11 @@
           </div>
           <ul>
             <li>
-          <form class="" action="https://echo.htmlacademy.ru" method="get">
-            <label for="search" class="visually-hidden">Поиск:</label>
-            <input class="search-input" id="search" type="search" name="search" value="" placeholder="Поиск:">
-            <span class="icon-search icons-header icon-cursor-search"></span>
-          </form>
+              <form class="" action="https://echo.htmlacademy.ru" method="get">
+                <label for="search" class="visually-hidden">Поиск:</label>
+                <input class="search-input" id="search" type="search" name="search" value="" placeholder="Поиск:">
+                <span class="icon-search icons-header icon-cursor-search"></span>
+              </form>
             </li>
             <li class="favorites-list">
               <a href="#" class="favorites">Закладки: 0</a>
@@ -38,16 +38,16 @@
       </div>
       <div class="lightblue-background">
         <div class="container header-panel">
-            <p class="title">
-              Интернет-магазин
-              строительных материалов <br>
-              и инструментов для ремонта
-            </p>
-            <section class="contact-info-header">
-              <h2 class="visually-hidden">Контактный телефон:</h2>
-              <a href="tel:+78125550555">+7 (812) 555-05-55</a>
-              <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-            </section>
+          <p class="title">
+            Интернет-магазин
+            строительных материалов <br>
+            и инструментов для ремонта
+          </p>
+          <section class="contact-info-header">
+            <h2 class="visually-hidden">Контактный телефон:</h2>
+            <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          </section>
           <ul class="user-panel">
             <li class="sign-in">
               <a href="#" class="sign-in-btn">Войти</a>
@@ -57,82 +57,82 @@
               <a href="#" class="sign-un-btn">Регистрация</a>
             </li>
           </ul>
-          </div>
-          <div class="header-nav-div">
-            <nav class="header-navigation container m-top-40">
-              <ul>
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="#">Компания</a></li>
-                <li><a href="catalog.html">Каталог</a></li>
-                <li><a href="#">Новости</a></li>
-                <li><a href="#">Спецпредложения</a></li>
-                <li><a href="#">Доставка</a></li>
-                <li><a href="#">Контакты</a></li>
-              </ul>
-            </nav>
-          </div>
+        </div>
+        <div class="header-nav-div">
+          <nav class="header-navigation container m-top-40">
+            <ul>
+              <li><a href="index.html">Главная</a></li>
+              <li><a href="#">Компания</a></li>
+              <li><a href="catalog.html">Каталог</a></li>
+              <li><a href="#">Новости</a></li>
+              <li><a href="#">Спецпредложения</a></li>
+              <li><a href="#">Доставка</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </header>
     <main class="cuprum-family">
-    <div class="container m-top-59 m-bottom-53">
-      <div class="container-elements-first-line">
-        <section class="elements-catalog-list element-1">
-          <span class="new-catalog-item-materials"></span>
-          <h2>Материалы</h2>
-          <a href="#">На любой вкус</a>
-        </section>
-        <section class="elements-catalog-list element-2">
-          <h2>Инструмент</h2>
-          <a href="#">На все случаи</a>
-        </section>
-        <section class="elements-catalog-list element-3">
-          <h2>Техника</h2>
-          <a href="#">Для стройки</a>
-        </section>
-      </div>
-      <div class="container-elements-second-line">
-        <div class="big-element">
-          <section class="element-4">
-            <div class="slider-controls">
-              <span class="slider-dots-item" onclick="currentSlide(1)"></span>
-              <span class="slider-dots-item" onclick="currentSlide(2)"></span>
-            </div>
-            <a href="#" class="left-btn-slider" onclick="minusSlide()"><img src="img/left-slider.svg" alt="Кнопка влево" width="22" height="40"></a>
-            <a href="#" class="right-btn-slider" onclick="plusSlide()"><img src="img/right-slider.svg" alt="Кнопка вправо" width="22" height="40"></a>
-            <a href="catalog.html" class="catalog-btn">Открыть каталог</a>
-            <div class="slider-item">
-              <img src="img/slider-1.jpg" alt="Слайдер с перфораторами" width="620" height="266">
-              <h2 class="mp-null">Перфораторы</h2>
-              <p class="mp-null">Настоящие мужские игрушки</p>
-            </div>
-            <div class="slider-item">
-              <img src="img/slider-2.jpg" alt="Слайдер с дрелями" width="620" height="266">
-              <h2 class="mp-null">Дрели</h2>
-              <p class="mp-null">Соседям на радость!</p>
-            </div>
+      <div class="container m-top-59 m-bottom-53">
+        <div class="container-elements-first-line">
+          <section class="elements-catalog-list element-1">
+            <span class="new-catalog-item-materials"></span>
+            <h2>Материалы</h2>
+            <a href="#">На любой вкус</a>
+          </section>
+          <section class="elements-catalog-list element-2">
+            <h2>Инструмент</h2>
+            <a href="#">На все случаи</a>
+          </section>
+          <section class="elements-catalog-list element-3">
+            <h2>Техника</h2>
+            <a href="#">Для стройки</a>
           </section>
         </div>
-        <div class="small-elements">
-          <section class="elements-catalog-list element-5">
-            <h2>Скидки 50%</h2>
-            <a href="#">На 350 товаров</a>
-          </section>
-          <section class="elements-catalog-list element-6">
-            <h2>Доставка</h2>
-            <a href="#">Бесплатно</a>
-          </section>
+        <div class="container-elements-second-line">
+          <div class="big-element">
+            <section class="element-4">
+              <div class="slider-controls">
+                <span class="slider-dots-item" onclick="currentSlide(1)"></span>
+                <span class="slider-dots-item" onclick="currentSlide(2)"></span>
+              </div>
+              <a href="#" class="left-btn-slider" onclick="minusSlide()"><img src="img/left-slider.svg" alt="Кнопка влево" width="22" height="40"></a>
+              <a href="#" class="right-btn-slider" onclick="plusSlide()"><img src="img/right-slider.svg" alt="Кнопка вправо" width="22" height="40"></a>
+              <a href="catalog.html" class="catalog-btn">Открыть каталог</a>
+              <div class="slider-item">
+                <img src="img/slider-1.jpg" alt="Слайдер с перфораторами" width="620" height="266">
+                <h2 class="mp-null">Перфораторы</h2>
+                <p class="mp-null">Настоящие мужские игрушки</p>
+              </div>
+              <div class="slider-item">
+                <img src="img/slider-2.jpg" alt="Слайдер с дрелями" width="620" height="266">
+                <h2 class="mp-null">Дрели</h2>
+                <p class="mp-null">Соседям на радость!</p>
+              </div>
+            </section>
+          </div>
+          <div class="small-elements">
+            <section class="elements-catalog-list element-5">
+              <h2>Скидки 50%</h2>
+              <a href="#">На 350 товаров</a>
+            </section>
+            <section class="elements-catalog-list element-6">
+              <h2>Доставка</h2>
+              <a href="#">Бесплатно</a>
+            </section>
+          </div>
         </div>
       </div>
-    </div>
       <section class="container catalog">
         <div class="section-header m-bottom-10">
           <h2>Популярные товары:</h2>
           <a href="#" class="section-header-btn">Все популярные товары</a>
         </div>
         <ul class="p-left-null index-catalog">
-          <li>
+          <li class="catalog-item-list">
             <a href="#">
-              <img src="img/bosch-9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+            <img src="img/bosch-9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
             </a>
             <div class="btns-catalog-element">
               <a href="#" class="buy-btn">Купить</a>
@@ -147,9 +147,9 @@
             <p><del>32500 Р.</del></p>
             <p class="current-price"><ins>25500 Р.</ins></p>
           </li>
-          <li>
+          <li class="catalog-item-list">
             <a href="#">
-              <img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             </a>
             <div class="btns-catalog-element">
               <a href="#" class="buy-btn">Купить</a>
@@ -164,9 +164,9 @@
             <p><del>22500 Р.</del> </p>
             <p class="current-price"><ins>15500 Р.</ins></p>
           </li>
-          <li>
+          <li class="catalog-item-list">
             <a href="#">
-              <img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+            <img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             </a>
             <div class="btns-catalog-element">
               <a href="#" class="buy-btn">Купить</a>
@@ -181,10 +181,10 @@
             <p><del>30500 Р.</del> </p>
             <p class="current-price"><ins>25500 Р.</ins></p>
           </li>
-          <li>
+          <li class="catalog-item-list without-old-price">
             <span aria-label="Новый товар" class="new-catalog-item"></span>
             <a href="#">
-              <img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+            <img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             </a>
             <div class="btns-catalog-element">
               <a href="#" class="buy-btn">Купить</a>
@@ -196,7 +196,6 @@
               <span>BFG 2000</span>
               </a>
             </h3>
-            <p><del></del></p>
             <p class="current-price"><ins>12500 Р.</ins></p>
           </li>
         </ul>
@@ -209,42 +208,42 @@
         <ul>
           <li class="manufacturer">
             <a href="https://www.bosch.ru/">
-              <img src="img/partner-logo-1.jpg" alt="Bosch" width="126" height="37">
+            <img src="img/partner-logo-1.jpg" alt="Bosch" width="126" height="37">
             </a>
           </li>
           <li class="manufacturer">
             <a href="http://www.makita.ru/">
-              <img src="img/partner-logo-2.jpg" alt="Makita" width="123" height="40">
+            <img src="img/partner-logo-2.jpg" alt="Makita" width="123" height="40">
             </a>
           </li>
           <li class="manufacturer">
             <a href="https://ru.dewalt.global/">
-              <img src="img/partner-logo-3.jpg" alt="Dewalt" width="146" height="44">
+            <img src="img/partner-logo-3.jpg" alt="Dewalt" width="146" height="44">
             </a>
           </li>
           <li class="manufacturer">
             <a href="http://www.interskol.ru/">
-              <img src="img/partner-logo-4.jpg" alt="Интерскол" width="200" height="80">
+            <img src="img/partner-logo-4.jpg" alt="Интерскол" width="200" height="80">
             </a>
           </li>
           <li class="manufacturer">
             <a href="https://www.hitachi.ru/ru">
-              <img src="img/partner-logo-5.jpg" alt="Hitachi" width="169" height="31">
+            <img src="img/partner-logo-5.jpg" alt="Hitachi" width="169" height="31">
             </a>
           </li>
           <li class="manufacturer">
             <a href="https://www.lg.com/ru">
-              <img src="img/partner-logo-6.jpg" alt="LG" width="121" height="73">
+            <img src="img/partner-logo-6.jpg" alt="LG" width="121" height="73">
             </a>
           </li>
           <li class="manufacturer">
             <a href="https://www.aeg.ru/">
-              <img src="img/partner-logo-7.jpg" alt="AEG" width="151" height="96">
+            <img src="img/partner-logo-7.jpg" alt="AEG" width="151" height="96">
             </a>
           </li>
           <li class="manufacturer">
             <a href="https://www.metabo.com/ru/ru/">
-              <img src="img/partner-logo-8.jpg" alt="metabo" width="204" height="69">
+            <img src="img/partner-logo-8.jpg" alt="metabo" width="204" height="69">
             </a>
           </li>
         </ul>
@@ -253,7 +252,8 @@
         <section class="container services">
           <h2>Сервисы</h2>
           <p>Хороший интернет-магазин отличается от плохого не только ценами!
-            Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+            Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+          </p>
           <div class="services-sliders">
             <input class="delivery-input visually-hidden" id="delivery" type="radio" name="services" checked>
             <input class="guarantee-input visually-hidden" id="guarantee" type="radio" name="services">
@@ -299,9 +299,11 @@
           <section class="about-company">
             <h2>Компания «Техномарт»</h2>
             <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
-              строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+              строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
+            </p>
             <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-              Техномарт работает со многими транспортными компаниями:</p>
+              Техномарт работает со многими транспортными компаниями:
+            </p>
             <ul class="mp-null">
               <li>Деловые линии</li>
               <li>Автотрейдинг</li>
@@ -312,7 +314,8 @@
           <section class="contacts">
             <h2>Контакты</h2>
             <p>Вы можете забрать товар сами, <br>
-              заехав в наш офис:</p>
+              заехав в наш офис:
+            </p>
             <a href="#"><img src="img/map.png" width="300" height="158" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></a>
             <a href="#" class="contact-us-btn">Заблудились? Напишите нам!</a>
           </section>
@@ -341,7 +344,8 @@
           </div>
           <nav class="catalog-navigation">
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
-            <a class="tel-footer" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+              <a class="tel-footer" href="tel:+78125550555">+7 (812) 555-05-55</a>
+            </p>
             <ul>
               <li><a href="#">Материалы</a></li>
               <li><a href="#">Техника</a></li>
@@ -356,7 +360,8 @@
           <h2 class="visually-hidden">Правовая информация</h2>
           <div class="copyright">
             <p>© 2010–2019 Компания «Техномарт» <br>
-              Все права защищены</p>
+              Все права защищены
+            </p>
           </div>
           <div class="social-media">
             <a href="#"><img aria-label="Вконтакте" src="img/vk.svg" alt="Вкотакте" width="26" height="15"></a>
@@ -365,9 +370,11 @@
           </div>
           <div class="feedback-developer">
             <p>Обратная связь:
-              <a href="#">mail@htmlacademy.ru</a></p>
+              <a href="#">mail@htmlacademy.ru</a>
+            </p>
             <p>Разработано —
-              <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+              <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+            </p>
           </div>
         </section>
       </div>
@@ -375,18 +382,18 @@
     <section class="write-us">
       <h2 class="visually-hidden">Форма обратной связи</h2>
       <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
-          <button class="popup-close-btn" type="button"></button>
-          <div class="container-write-us">
-            <label class="write-us-name" for="name">Ваше имя:</label>
-            <label class="write-us-email" for="email">Ваше e-mail:</label>
-            <input class="write-us-name-input mp-null" id="name" type="text" name="name" placeholder="Имя Фамилия">
-            <input class="mp-null" id="email" type="email" name="email" placeholder="email@example.com">
-            <label for="letter">Текст письма:</label>
-            <textarea class="letter mp-null" id="letter" name="letter" placeholder="В свободной форме"></textarea>
-          </div>
-          <div class="write-us-footer">
-            <button class="write-us-btn" type="submit">Отправить</button>
-          </div>
+        <button class="popup-close-btn" type="button"></button>
+        <div class="container-write-us">
+          <label class="write-us-name" for="name">Ваше имя:</label>
+          <label class="write-us-email" for="email">Ваше e-mail:</label>
+          <input class="write-us-name-input mp-null" id="name" type="text" name="name" placeholder="Имя Фамилия">
+          <input class="mp-null" id="email" type="email" name="email" placeholder="email@example.com">
+          <label for="letter">Текст письма:</label>
+          <textarea class="letter mp-null" id="letter" name="letter" placeholder="В свободной форме"></textarea>
+        </div>
+        <div class="write-us-footer">
+          <button class="write-us-btn" type="submit">Отправить</button>
+        </div>
       </form>
     </section>
     <section class="map-popup">
