--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
               <a href="#" class="basket">Корзина: 0</a>
             </li>
             <li>
+              <!-- добавил коммент -->
               <a href="#" class="checkout">Оформить заказ</a>
             </li>
           </ul>
